=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 v1.026 - Under Development

=over

=item *

L<Krang::Media> now handles calls to find() with an arrayref of
site_ids. [Peter]

=item *

L<Krang::Template> now handles calls to find() with an arrayref of
category_ids. [Peter]

=item * 

Fixed a bug in L<Krang::CGI::Site> that would cause ISE on attempted 
delete if a site had content in its root directory but no had no
other categories [Matt]

=item *

Added population of 'width', 'height', and 'image_dimensions' for 
Krang::ElementClass::MediaLink fill_template. [Matt]

=item *

Bugfixes to L<Krang::CGI::Template> that prevented files from being
uploaded to the edit template screen, and caused ISE when no filename
present. [Matt]

=item *

Bugfixes to L<Krang::Schedule> - checked out or missing objects will
no longer drop large perl-heavy error messages in the logs.  Thanks
for Michael Peters for the initial work to fix it.  [Peter]

=item *

Fixed a bug in L<Krang::Publisher> - zero-length story output is now
output properly, with a logfile entry to make a note of it.  [Peter]

=item *

Deployed version is now displayed in the template edit UI.
[Michael Peters]

=item *

Fixed a bug in L<Krang::Schedule> - scheduling specific versions of a
story or media object for publish now works again.  [Peter]

=item *

Additional documentation!  The long-awaited 
HREF[Creating an Element Library in Krang|building_element_library.html]! [Peter]


=item *

New documentation added -
HREF[Running Krang on the Desktop|krang_on_desktop.html]:
A guide on how to install and run Krang on your local machine.
[Peter]

=item *

Solaris support added!  Tested against Solaris 9, this should also
work against previous versions as well.  Thanks to Joseph Sacco
(jsacco@earthlink.net). [Peter]

=item *

Support for Mac OSX has been added!  Currently tested against 10.3.5,
let us know if it works on other versions!  Thanks to Matthew Wood